css/style.css
/* GENERAL */
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    color: #a3a3a3;
    background-color: rgba(176, 177, 108, 0.1);
}
.background-color--std{
    background-color: #a3a3a3;
}
body .container{
    height: calc( 100vh - 80px);
}
a{
    text-decoration: none;
}
ul{
    list-style: none;;
}
li{
    text-decoration: none;
    padding: 5px;
}
.flex{
    display: flex;
}
.space-between{
    justify-content: space-between;
}
.block{
    display: block;
}
.inline-block{
    display: inline-block;
}
.relative{
    position: relative;
}
.absolute{
    position: absolute;
}
.fixed{
    position: fixed;
}
/* .debug{
    background-color: coral;
    border: 1px solid blue;
} */
/* ////GENERAL */
/* TYPO */
body{
    font-family: 'Montserrat', sans-serif;
    font-weight: 600;
    font-size: 12px;
}
.color-white{
    color: white;
}
/* ////TYPO */
/* SPACING */

/* ////SPACING */
/* COLORS */

/* ////COLORS */
/* HEADER */
header{
    height: 100%;
    flex-direction: column;
    background-color: black;
    align-items: center;
    flex-shrink: 0;
}
header li{
    text-decoration: none;
    padding: 5px 0;
}
header>*{
    width: 100%;
}
.header__width--xs{
    width: 60px;
}
.header__display--xs{
    display: inline-block;
}
.header__padding--xs>*{
    padding: 10px;
}
.header__display--md{
    display: none;
}
header .nav-footer{
    margin-top: auto;
}
/* .header__favicon--xs{
    font-size: 30px;
} */

.header__icon--xs{
    width: 30px;
    height: 30px;
}
.header__icon--playlist{
    justify-content: center;
    align-items: center;
    color: black;
    font-size: 30px;
    transform: scale(1.2);
    margin-left: calc(30px * (0.2 / 1.2));
}
.header__icon--round{
    border-radius: 50%;
    overflow: hidden;
}
header span{
    align-self: center;
    padding-left: 10px;
}
header h3{
    padding-bottom: 10px;
}
header .overflow{
    overflow: auto;
}
header .ul2{
    padding-top: 10px;
    overflow-y: auto;
}
header .nav-footer ul{
    flex-direction: column;
}
.header__footer--align--xs{
    align-self: center;
}
/* ////HEADER */
/* NAV */
nav{
    height: 80px;
    justify-content: center;
    align-items: center;
}
/* ////NAV */
/* MAIN */
#upgrade-banner{
    width: calc(100% - 50px);
    flex-shrink: 0;
    height: 80px;
    background-color: rgba(0, 0, 0, 0.5);
    top: 0;
    right: 0;
    justify-content: flex-end;
    align-items: center;
}
#upgrade-banner button{
    border: 1px solid white;
    border-radius: 15px;
    padding: 5px 20px;
    margin-right: 5px;
}
main{
    padding-top: 80px;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    background-color: #141922;
}
main section{
    height: 400px;
}
/* ////MAIN */
/* FOOTER */
footer{
    height: 80px;
    justify-content: space-between;
    align-items: center;
    padding: 10px 0;
    background-color: #282828;
}
footer .left, footer .right{
    width: 200px;
    align-items: center;
}
footer .left .subtitle{
    font-size: 10px;
}
footer .left div>*{
    align-self: center;
    padding: 5px;
}
footer .left img{
    width: 50px;
}
footer .right{
    justify-content: space-between;
    padding-right: 5px;
}
.progressbar{
    width: 100px;
    height: 4px;
    border-radius: 2px;
}
.progressbar::after{
    content: "";
    display: block;
    height: 4px;
    width: 25%;
    border-radius: 2px;
    background-color: white;
}
/* footer>*, header>*, nav>*{
    height: 50px;
    width: 100px;
} */
/* ////FOOTER */
/*RESPONSIVE CHANGES*/
@media screen and (min-width: 600px) {
    /* HEADER RESPONSIVE */
    .header__width--md{
        width: 240px;
    }
    .header__display--md{
        display: inline-block;
    }
    .header__display--xs{
        display: none;
    }
    .header__padding--md>*{
        padding: 15px;
    }
    .header__border--bottom--md{
        border-bottom: 1px solid #a3a3a3;;
    }
    .header__footer--align--md{
        align-self: flex-start;
    }
    /*////HEADER RESPONSIVE*/
    /*BANNER RESPONSIVE*/
    #upgrade-banner{
        width: calc(100% - 240px);
    }
    /*////BANNER RESPONSIVE*/
}

